# segmentor

./: .pre-commit.config.yaml  Dockerfile  Dockerfile.gpu  INSTALLATION.md  MANIFEST.in  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: config.md  quickstart.md
examples/: api_client.py  basic_usage.py  batch_processing.py
perceptra_seg/: __init__.py  cli.py  config.py  core.py  exceptions.py  models.py  py.typed  quickstart.py
perceptra_seg/backends/: __init__.py  base.py  onnx_sam_v1.py  onnx_sam_v2.py  torch_sam_v1.py  torch_sam_v2.py
perceptra_seg/utils/: cache.py  dependency_check.py  image_io.py  tiling.py
segmentor/: __init__.py  __version__.py  cli.py  config.py  core.py  quickstart.py
segmentor/backends/: __init__.py  base.py  onnx_sam_v1.py  onnx_sam_v2.py  torch_sam_v1.py  torch_sam_v2.py
segmentor/utils/: image_io.py  mask_utils.py
service/: __init__.py  main.py  middleware.py  routes.py
tests/: __init__.py  conftest.py  test_backends.py  test_core.py  test_kwargs_handling.py  test_service.py  test_utils.py
